--- a/EmployeeManagementSystem/Views/Home/Contact.cshtml
+++ b/EmployeeManagementSystem/Views/Home/Contact.cshtml
@@ -5,13 +5,11 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    Heaven Way<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    +886-912345678
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Support:</strong>   <a href="mailto:kaitiy2001@gmail.com">Support@example.com</a><br />
 </address>
